# uwu-bot

./: Cargo.toml  Dockerfile
src/: main.rs
